--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: <%= ENV['postgres_DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
@@ -29,10 +31,11 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: myapp
+  encoding: unicode
+  username: postgres
 
   # The password associated with the postgres role (username).
-  #password:
+  password: Emerald1304
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -58,6 +61,9 @@ development:
 test:
   <<: *default
   database: Recipe_test
+  encoding: unicode
+  username: postgres
+  password: Emerald1304
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
