--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: postgres
+  username: chris
   password: <%= ENV['postgres_DATABASE_PASSWORD'] %>
 
 development:
@@ -32,10 +32,10 @@ development:
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
   encoding: unicode
-  username: postgres
+  username: chris
 
   # The password associated with the postgres role (username).
-  password: Emerald1304
+  password: 0124
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -62,8 +62,8 @@ test:
   <<: *default
   database: Recipe_test
   encoding: unicode
-  username: postgres
-  password: Emerald1304
+  username: chris
+  password: 0124
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
